Bug 319559 - Systemsettings > Systemmanagement > Date & Time
Summary: Systemsettings > Systemmanagement > Date & Time
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_clock (other bugs)
Version First Reported In: 1.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Paul Campbell
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-09 06:20 UTC by Julian Groß
Modified: 2013-11-23 13:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Julian Groß 2013-05-09 06:20:29 UTC
Application: systemsettings (1.0)
KDE Platform Version: 4.9.5
Qt Version: 4.8.3
Operating System: Linux 3.5.0-28-generic x86_64
Distribution: Linux Mint 14 Nadia

-- Information about the crash:
- What I was doing when the application crashed:
I clicked on "Date & Time" while running CPU consuming applications like flash and steam. After some time loading it crashed.
- Custom settings of the application:
Classical Treeview

The crash can be reproduced some of the time.

-- Backtrace:
Application: Systemeinstellungen (systemsettings), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fd8201ac7c0 (LWP 2976))]

Thread 3 (Thread 0x7fd801def700 (LWP 2979)):
#0  0x00007fd81d1c1313 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fd8169a3d84 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fd8169a41e2 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fd807cdb4a6 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007fd8169c7645 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fd81226e764 in ?? () from /usr/lib/nvidia-current-updates/libGL.so.1
#6  0x00007fd816e72e9a in start_thread (arg=0x7fd801def700) at pthread_create.c:308
#7  0x00007fd81d1ccccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#8  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fd7f252b700 (LWP 2988)):
#0  0x00007fd816e7605d in __pthread_mutex_unlock_usercnt (mutex=<optimized out>, decr=<optimized out>) at pthread_mutex_unlock.c:52
#1  __pthread_mutex_unlock (mutex=0x7fd7e40029b0) at pthread_mutex_unlock.c:290
#2  0x00007fd8169e0e51 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fd8169a3769 in g_main_context_query () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007fd8169a3cf9 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fd8169a3ea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#6  0x00007fd81d941c16 in QEventDispatcherGlib::processEvents (this=0x7fd7e4002600, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#7  0x00007fd81d9122bf in QEventLoop::processEvents (this=this@entry=0x7fd7f252acd0, flags=...) at kernel/qeventloop.cpp:149
#8  0x00007fd81d912548 in QEventLoop::exec (this=0x7fd7f252acd0, flags=...) at kernel/qeventloop.cpp:204
#9  0x00007fd81d813b10 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#10 0x00007fd81d8f29af in QInotifyFileSystemWatcherEngine::run (this=0x11acfc0) at io/qfilesystemwatcher_inotify.cpp:248
#11 0x00007fd81d816aec in QThreadPrivate::start (arg=0x11acfc0) at thread/qthread_unix.cpp:338
#12 0x00007fd81226e764 in ?? () from /usr/lib/nvidia-current-updates/libGL.so.1
#13 0x00007fd816e72e9a in start_thread (arg=0x7fd7f252b700) at pthread_create.c:308
#14 0x00007fd81d1ccccd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#15 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fd8201ac7c0 (LWP 2976)):
[KCrash Handler]
#6  operator char const* (this=<error reading variable: Cannot access memory at address 0x3c600000004>) at /usr/include/qt4/QtCore/qbytearray.h:425
#7  KAboutData::appName (this=0x3c600000004) at ../../kdecore/kernel/kaboutdata.cpp:680
#8  0x00007fd81f3074f6 in KCModule::setNeedsAuthorization (this=0x15b7340, needsAuth=<optimized out>) at ../../kdeui/widgets/kcmodule.cpp:152
#9  0x00007fd7ea989f6b in KclockModule::KclockModule (this=0x15b7340, parent=<optimized out>) at ../../../kcontrol/dateandtime/main.cpp:79
#10 0x00007fd7ea98a0d4 in KPluginFactory::createInstance<KclockModule, QWidget> (parentWidget=<optimized out>, parent=<optimized out>, args=...) at /usr/include/kpluginfactory.h:477
#11 0x00007fd81e0e92c5 in KPluginFactory::create (this=0x15b7390, iface=0x7fd81f3e6560 <qt_meta_stringdata_KCModule> "KCModule", parentWidget=0x0, parent=0x11006c0, args=..., keyword=...) at ../../kdecore/util/kpluginfactory.cpp:203
#12 0x00007fd81f8c788a in create<KCModule> (args=..., keyword=..., parent=0x11006c0, parentWidget=0x0, this=<optimized out>) at ../../kdecore/util/kpluginfactory.h:531
#13 createInstance<KCModule> (error=0x7fff45ae3ff0, args=..., parent=0x11006c0, parentWidget=0x0, this=0xf86a20) at ../../kdecore/services/kservice.h:559
#14 createInstance<KCModule> (error=0x7fff45ae3ff0, args=..., parent=0x11006c0, this=0xf86a20) at ../../kdecore/services/kservice.h:536
#15 KCModuleLoader::loadModule (mod=..., report=KCModuleLoader::Inline, parent=0x11006c0, args=...) at ../../kutils/kcmoduleloader.cpp:89
#16 0x00007fd81f8cc870 in KCModuleProxyPrivate::loadModule (this=this@entry=0x1582440) at ../../kutils/kcmoduleproxy.cpp:106
#17 0x00007fd81f8ccfc5 in KCModuleProxy::realModule (this=<optimized out>) at ../../kutils/kcmoduleproxy.cpp:83
#18 0x00007fd81f6a5394 in ModuleView::stateChanged (this=0xf435f0) at ../../../systemsettings/core/ModuleView.cpp:350
#19 0x00007fd81f6a548c in ModuleView::activeModuleChanged (this=<optimized out>, current=<optimized out>, previous=<optimized out>) at ../../../systemsettings/core/ModuleView.cpp:337
#20 0x00007fd81f6a6093 in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at ./ModuleView.moc:76
#21 ModuleView::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at ./ModuleView.moc:61
#22 0x00007fd81d928f5f in QMetaObject::activate (sender=0xf45670, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff45ae4580) at kernel/qobject.cpp:3547
#23 0x00007fd81f2a946c in KPageWidget::currentPageChanged (this=<optimized out>, _t1=0x1571c90, _t2=0x0) at ./kpagewidget.moc:110
#24 0x00007fd81d928f5f in QMetaObject::activate (sender=0xf45670, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff45ae46d0) at kernel/qobject.cpp:3547
#25 0x00007fd81f2a5cf7 in KPageView::currentPageChanged (this=<optimized out>, _t1=..., _t2=...) at ./kpageview.moc:154
#26 0x00007fd81f2a622f in KPageViewPrivate::_k_pageSelected (this=0xe534b0, index=..., previous=...) at ../../kdeui/paged/kpageview.cpp:244
#27 0x00007fd81d928f5f in QMetaObject::activate (sender=0x1556c20, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff45ae48e0) at kernel/qobject.cpp:3547
#28 0x00007fd81eace077 in QItemSelectionModel::selectionChanged (this=this@entry=0x1556c20, _t1=..., _t2=...) at .moc/release-shared/moc_qitemselectionmodel.cpp:166
#29 0x00007fd81ead2d13 in QItemSelectionModel::emitSelectionChanged (this=this@entry=0x1556c20, newSelection=..., oldSelection=...) at itemviews/qitemselectionmodel.cpp:1544
#30 0x00007fd81ead3edc in QItemSelectionModel::select (this=0x1556c20, selection=..., command=...) at itemviews/qitemselectionmodel.cpp:1110
#31 0x00007fd81eacfb8b in QItemSelectionModel::select (this=this@entry=0x1556c20, index=..., command=...) at itemviews/qitemselectionmodel.cpp:985
#32 0x00007fd81eace2c1 in QItemSelectionModel::setCurrentIndex (this=0x1556c20, index=..., command=...) at itemviews/qitemselectionmodel.cpp:1174
#33 0x00007fd81f2a506f in KPageViewPrivate::_k_rebuildGui (this=0xe534b0) at ../../kdeui/paged/kpageview.cpp:70
#34 0x00007fd81f2a5f75 in KPageViewPrivate::_k_modelChanged (this=0xe534b0) at ../../kdeui/paged/kpageview.cpp:190
#35 0x00007fd81d928f5f in QMetaObject::activate (sender=0xf4a140, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#36 0x00007fd81f2aa731 in KPageWidgetModel::addPage (this=0xf4a140, item=0x1571c90) at ../../kdeui/paged/kpagewidgetmodel.cpp:401
#37 0x00007fd81f6a5990 in ModuleView::addModule (this=this@entry=0xf435f0, module=0xfb3b48) at ../../../systemsettings/core/ModuleView.cpp:191
#38 0x00007fd81f6a5fb2 in ModuleView::loadModule (this=0xf435f0, menuItem=...) at ../../../systemsettings/core/ModuleView.cpp:144
#39 0x00007fd7f92e052f in changeModule (activeModule=..., this=0xe933f0) at ../../../systemsettings/classic/ClassicMode.cpp:165
#40 ClassicMode::changeModule (this=0xe933f0, activeModule=...) at ../../../systemsettings/classic/ClassicMode.cpp:154
#41 0x00007fd81d928f5f in QMetaObject::activate (sender=0x13226e0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff45ae5110) at kernel/qobject.cpp:3547
#42 0x00007fd81ea7b3b5 in QAbstractItemView::clicked (this=this@entry=0x13226e0, _t1=...) at .moc/release-shared/moc_qabstractitemview.cpp:348
#43 0x00007fd81ea7b742 in QAbstractItemView::mouseReleaseEvent (this=0x13226e0, event=0x7fff45ae5e10) at itemviews/qabstractitemview.cpp:1814
#44 0x00007fd81e5bf850 in QWidget::event (this=0x13226e0, event=0x7fff45ae5e10) at kernel/qwidget.cpp:8371
#45 0x00007fd81e96eb66 in QFrame::event (this=0x13226e0, e=0x7fff45ae5e10) at widgets/qframe.cpp:557
#46 0x00007fd81ea7a59b in QAbstractItemView::viewportEvent (this=0x13226e0, event=0x7fff45ae5e10) at itemviews/qabstractitemview.cpp:1644
#47 0x00007fd81eabed81 in QTreeView::viewportEvent (this=0x13226e0, event=0x7fff45ae5e10) at itemviews/qtreeview.cpp:1257
#48 0x00007fd81d9136d6 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0x1342e70, event=0x7fff45ae5e10) at kernel/qcoreapplication.cpp:1025
#49 0x00007fd81e56fe6c in QApplicationPrivate::notify_helper (this=this@entry=0xaa2bd0, receiver=receiver@entry=0x1342e70, e=e@entry=0x7fff45ae5e10) at kernel/qapplication.cpp:4558
#50 0x00007fd81e574b6b in QApplication::notify (this=<optimized out>, receiver=0x1342e70, e=0x7fff45ae5e10) at kernel/qapplication.cpp:4105
#51 0x00007fd81f2781f6 in KApplication::notify (this=0x7fff45ae6a80, receiver=0x1342e70, event=0x7fff45ae5e10) at ../../kdeui/kernel/kapplication.cpp:311
#52 0x00007fd81d91356e in QCoreApplication::notifyInternal (this=0x7fff45ae6a80, receiver=0x1342e70, event=0x7fff45ae5e10) at kernel/qcoreapplication.cpp:915
#53 0x00007fd81e570cd3 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#54 QApplicationPrivate::sendMouseEvent (receiver=0x1342e70, event=0x7fff45ae5e10, alienWidget=0x1342e70, nativeWidget=0xf41100, buttonDown=0x7fd81f04c308 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3173
#55 0x00007fd81e5ee554 in QETWidget::translateMouseEvent (this=this@entry=0xf41100, event=event@entry=0x7fff45ae6590) at kernel/qapplication_x11.cpp:4622
#56 0x00007fd81e5ed44f in QApplication::x11ProcessEvent (this=0x7fff45ae6a80, event=0x7fff45ae6590) at kernel/qapplication_x11.cpp:3737
#57 0x00007fd81e614fa2 in x11EventSourceDispatch (s=0xa96200, callback=0x0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#58 0x00007fd8169a3ab5 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#59 0x00007fd8169a3de8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#60 0x00007fd8169a3ea4 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#61 0x00007fd81d941c16 in QEventDispatcherGlib::processEvents (this=0x9d4ad0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#62 0x00007fd81e614c1e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#63 0x00007fd81d9122bf in QEventLoop::processEvents (this=this@entry=0x7fff45ae6960, flags=...) at kernel/qeventloop.cpp:149
#64 0x00007fd81d912548 in QEventLoop::exec (this=0x7fff45ae6960, flags=...) at kernel/qeventloop.cpp:204
#65 0x00007fd81d917708 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#66 0x000000000040a98e in main (argc=5, argv=0x7fff45ae6bc8) at ../../../systemsettings/app/main.cpp:49

This bug may be a duplicate of or related to bug 247830.

Possible duplicates by query: bug 279636, bug 277727, bug 276678, bug 273791, bug 272905.

Reported using DrKonqi
Comment 1 Chao Feng 2013-11-23 13:12:11 UTC
Git commit 823b13c35a19bc61735eba986d10eadb4180a613 by Feng Chao.
Committed on 23/11/2013 at 12:43.
Pushed by fengchao into branch 'KDE/4.12'.

Do not delete old about if old and new are the same.

If set new about dialog using the same pointer, the memory will be cleaned.
For example, double click in system settings tree mode will cause crash.
Related: bug 247830
FIXED-IN: 4.12.0

M  +4    -2    kdeui/widgets/kcmodule.cpp

http://commits.kde.org/kdelibs/823b13c35a19bc61735eba986d10eadb4180a613
Comment 2 Chao Feng 2013-11-23 13:16:18 UTC
Git commit 2e5f3fc010ac4b4501c8981489d2f6cf2a21cb47 by Feng Chao.
Committed on 23/11/2013 at 12:43.
Pushed by fengchao into branch 'master'.

Do not delete old about if old and new are the same.

If set new about dialog using the same pointer, the memory will be cleaned.
For example, double click in system settings tree mode will cause crash.
Related: bug 247830
FIXED-IN: 4.12.0
(cherry picked from commit 823b13c35a19bc61735eba986d10eadb4180a613)

M  +4    -2    kdeui/widgets/kcmodule.cpp

http://commits.kde.org/kdelibs/2e5f3fc010ac4b4501c8981489d2f6cf2a21cb47
Comment 3 Chao Feng 2013-11-23 13:47:02 UTC
Git commit c2a49179ffe8a161d1b97f5c3cbe01a1d31ffff5 by Feng Chao.
Committed on 23/11/2013 at 13:44.
Pushed by fengchao into branch 'frameworks'.

Do not delete old about if old and new are the same.

If set new about dialog using the same pointer, the memory will be cleaned.
For example, double click in system settings tree mode will cause crash.
Related: bug 247830

M  +4    -2    tier3/kconfigwidgets/src/kcmodule.cpp

http://commits.kde.org/kdelibs/c2a49179ffe8a161d1b97f5c3cbe01a1d31ffff5