Do not delete old about if old and new are the same.

If set new about dialog using the same pointer, the memory will be cleaned.
For example, double click in system settings tree mode will cause crash.

BUG: 319559
BUG: 247830